Issue 102: Modifying documentation
Signed-off-by: SrishT <Srishti.Thakkar@dell.com>