@@ -46,7 +46,7 @@ Default memoryOpts:
 "-XX:+HeapDumpOnOutOfMemoryError",
 "-XX:HeapDumpPath=" + heapDumpDir,
 ```
-if BookKeeper version is greater or equal to 0.4, then the followings are also added to the default memoryOpts
+if BookKeeper version is greater or equal to 0.4, then the followings are also added to the default memoryOpts:
 ```
 "-XX:+UnlockExperimentalVMOptions",
 "-XX:+UseContainerSupport",
@@ -67,7 +67,7 @@ Default gcOpts:
 "-XX:-ResizePLAB",
 ```
 
-Default gcLoggingOpts:
+Default gcLoggingOpts added if BookKeeper version is below 0.9.0:
 ```
 "-XX:+PrintGCDetails",
 "-XX:+PrintGCDateStamps",
@@ -75,6 +75,10 @@ Default gcLoggingOpts:
 "-XX:+UseGCLogFileRotation",
 "-XX:NumberOfGCLogFiles=5",
 "-XX:GCLogFileSize=64m",
+```
+however, if BookKeeper version is greater or equal to 0.9.0, the followings options are added to the default gcLoggingOpts instead:
+```
+"-Xlog:gc*,safepoint::time,level,tags:filecount=5,filesize=64m"
 ```
 
 ### BookKeeper Custom Configuration
